results/SVCOMP/conversational/log-StringBuilderChars02-2024_03_16_04_11_34.txt
public class StringBuilderChars02 {
    //@ requires arg != null;
    //@ requires (\forall int i; 0 <= i && i < arg.length(); (int)Character.MIN_VALUE <= (int)arg.charAt(i) && (int)arg.charAt(i) <= (int)Character.MAX_VALUE);
    //@ ensures \result <==> buffer.toString().equals("DiffBlue Limitted");
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.toString().equals("DiffBlue Limitted");
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderChars02.java:4: error: cannot find symbol
    //@ ensures \result <==> buffer.toString().equals("DiffBlue Limitted");
                             ^
  symbol:   variable buffer
  location: class StringBuilderChars02
1 error

public class StringBuilderChars02 {
    //@ requires arg != null;
    //@ requires (\forall int i; 0 <= i && i < arg.length(); (int)Character.MIN_VALUE <= (int)arg.charAt(i) && (int)arg.charAt(i) <= (int)Character.MAX_VALUE);
    //@ ensures \result <==> new StringBuilder(arg).toString().equals("DiffBlue Limitted");
    public static boolean f(String arg) {
        return new StringBuilder(arg).toString().equals("DiffBlue Limitted");
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderChars02.java:4: error: Object allocation is not permitted in specification expressions
    //@ ensures \result <==> new StringBuilder(arg).toString().equals("DiffBlue Limitted");
                             ^
1 error

public class StringBuilderChars02 {
    //@ requires arg != null;
    //@ requires (\forall int i; 0 <= i && i < arg.length(); (int)Character.MIN_VALUE <= (int)arg.charAt(i) && (int)arg.charAt(i) <= (int)Character.MAX_VALUE);
    //@ ensures \result <==> arg.equals("DiffBlue Limitted");
    public static boolean f(String arg) {
        return arg.equals("DiffBlue Limitted");
    }
}

